objects/CEE_Room__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Address_Line_1__c</fullName>
        <label>Address Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_2__c</fullName>
        <label>Address Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Building__c</fullName>
        <label>Building</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CEE_Location__c</fullName>
        <label>CEE Location</label>
        <referenceTo>CEE_Location__c</referenceTo>
        <relationshipLabel>CEE Rooms</relationshipLabel>
        <relationshipName>CEE_Rooms</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Facing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Facing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Name__c</fullName>
        <label>Display Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EBC_CBC_Location__c</fullName>
        <label>EBC/CBC Location</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Code__c</fullName>
        <label>Email Code</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exchange_Email_Nickname__c</fullName>
        <label>Exchange Email Nickname</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Telepresence__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Telepresence</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <inlineHelpText>Priority of room, rated 1 (highest) to 3 (lowest)</inlineHelpText>
        <label>Priority</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Proxy_Status__c</fullName>
        <label>Proxy Status</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Room_Details__c</fullName>
        <label>Room Details</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Size__c</fullName>
        <inlineHelpText>Number of people room can hold</inlineHelpText>
        <label>Size</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <label>State Province</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Telepresence__c</fullName>
        <inlineHelpText>Has Telepresence capabilities</inlineHelpText>
        <label>Telepresence</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>CEE Room</label>
    <nameField>
        <label>Room Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CEE Rooms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CEE_Location__c</columns>
        <columns>Display_Name__c</columns>
        <columns>Active__c</columns>
        <columns>Building__c</columns>
        <columns>City__c</columns>
        <columns>Country__c</columns>
        <columns>Size__c</columns>
        <columns>Is_Telepresence__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>City__c</field>
            <operation>equals</operation>
            <value>San Jose</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>CPOC</fullName>
        <columns>NAME</columns>
        <columns>CEE_Location__c</columns>
        <columns>Display_Name__c</columns>
        <columns>Active__c</columns>
        <columns>Building__c</columns>
        <columns>City__c</columns>
        <columns>Country__c</columns>
        <columns>Size__c</columns>
        <columns>Is_Telepresence__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CEE_Location__c</field>
            <operation>contains</operation>
            <value>CPOC</value>
        </filters>
        <label>CPOC</label>
        <language>en_US</language>
    </listViews>
</CustomObject>